--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<span id="finalTotal"></span>
 		</h2>
 	</div>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script   src="https://code.jquery.com/jquery-3.3.1.slim.js"   integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/javascript/javascript.js"></script>
     <script src="game.js"></script>
 </body>
