--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</h2>
 	</div>
 	<div class="gems">
-		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id="one" alt="Blue Gem">
+		<img src="gem.png" class=gemImage id="one" alt="Blue Gem">
 		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id="two" alt="Green Gem">
 		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id= "three" alt="Red Gem">
 		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id= "four" alt="Yellow Gem">
