--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	</div>
 	<div class="gems">
 		<img src="gem.png" class=gemImage id="one" alt="Blue Gem">
-		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id="two" alt="Green Gem">
-		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id= "three" alt="Red Gem">
-		<img src="/Users/zacharyschneider/Desktop/week-4-game/gem.png" class=gemImage id= "four" alt="Yellow Gem">
+		<img src="gem.png" class=gemImage id="two" alt="Green Gem">
+		<img src="gem.png" class=gemImage id= "three" alt="Red Gem">
+		<img src="gem.png" class=gemImage id= "four" alt="Yellow Gem">
 	</div>
 	<div class="userTotal">
 		<h2>Your total score is:
